Fix prev/next post link alignment on small displays

--- a/_sass/_pagepost.scss
+++ b/_sass/_pagepost.scss
@@ -106,6 +106,10 @@
     width: 50%;
     vertical-align: top;
 
+    @include media-query($on-palm) {
+      width: 100%;
+    }
+      
     > a {
       text-decoration: none;
     }
@@ -116,6 +120,10 @@
     width: 49%;
     text-align: right;
     vertical-align: top;
+
+    @include media-query($on-palm) {
+      width: 100%;
+    }
 
     > a {
       text-decoration: none;
